force-app/main/default/objects/pymts__Invoice__c/fields/pymts__Auto_Pay__c.field-meta.xml
<CustomField>
    <fullName>pymts__Auto_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this invoice should be automatically processed on the scheduled date</description>
    <label>Auto Pay</label>
    <type>Checkbox</type>
</CustomField>