force-app/main/default/objects/pymts__Invoice__c/fields/pymts__Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>pymts__Balance_Due__c</fullName>
    <description>Outstanding balance on this invoice (Total Amount - Amount Paid)</description>
    <formula>pymts__Total_Amount__c - pymts__Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>