force-app/main/default/objects/pymts__Invoice__c/fields/pymts__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>pymts__Due_Date__c</fullName>
    <description>Date when the invoice is due for payment</description>
    <label>Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>