force-app/main/default/objects/pymts__Invoice__c/fields/pymts__Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>pymts__Invoice_Date__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>