force-app/main/default/objects/pymts__Invoice__c/fields/pymts__Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>pymts__Total_Amount__c</fullName>
    <description>Total amount due for this invoice</description>
    <label>Total Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>